skill z-index problem solve

--- a/src/Slills/Skills.css
+++ b/src/Slills/Skills.css
@@ -2,7 +2,7 @@
   max-width: 100vw;
   background-color: #052545;
   position: relative;
-  z-index: -1;
+  z-index: 0;
 }
 
 .skills-container {
